Shamir's Secret Sharing in Java

Release Notes  --

v1.4.2
======
 o upgrade to gradle 2.x; upgrade jacoco plugin to standard plugin

v1.4.1
======
 o minor - break API compatibility - BuildVersion API changed
 o minor - break API compatibility - removed 'gui' package and classes
 o refactor BuildVersion from generated .java file to generated .properties file
   that is put into the .jar
 o remove gui source - it will be distributed in a separate artifact

v1.3.2
======
 o updated release notes for 1.3.1 and 1.3.2
 o added "info" option (in addition to "split" and "combine")
   to display built-in primes for 192, 384 and 4096 bits
 o added "bigintcs" option to perform operations on Big Integer Checksum,
   BigInteger, and String-to-byte values
 
v1.3.1
======
 o First maven central release
 o Ironic that the release notes file was not updated.
   But there is no going back now.

v1.3.0
======
 o First github release
 o Version is dot-3 now to follow compatibility convention  
    e.g. 1.3.1 is backward compatible with 1.3.0

v1.2
====
 o Replaced ant with gradle
 o Separated tests into unit and integration
 o Rearranged project directory layout to match latest practices
 o Renamed tests from UT.java to Test.java and IntegTest.java
 o Updated/fixed Readme.txt with working examples

v1.1
====
 o Added applet and Swing command-line front-ends
 o Fixes SourceForge Ticket #1 - testModExample fails
 o Fixes SourceForge Ticket #2 - exception Programmer error, list.size=2
 o Fixes SourceForge Ticket #3 - incorrect use of -m argument
 

v1.0
====
 o Engine implemented, working with and without modulus
 o Command-line interface implemented, both 'split' and 'combine'
