@@ -1,7 +1,56 @@
 Resources
+
+
+Solvers
 =========
+[Solving A System of Linear Equations]
+
+This is an independent confirmation that secretsharejava is doing the math correctly.  The basic idea is to split the secret into numbers, then use a different linear equation solver implementation to reconstruct the original secret.
+
+
+Run the split:
+```
+$ java -jar secretshare.jar split -k 3 -n 6 -sN 44652
+Share (x:1) = 111441
+Share (x:2) = 242682
+Share (x:3) = 438375
+Share (x:4) = 698520
+Share (x:5) = 1023117
+Share (x:6) = 1412166
+```
+
+We choose x:1, x:2 and x:3 secrets, which correspond to the equations
+111411 = a*x^0 + b*x^1 + c*x^2 = a + b + c
+242682 = a*x^0 + b*x^1 + c*x^2 = a + 2b + 4c
+438375 = a*x^0 + b*x^1 + c*x^2 = a + 3b + 9c
+
+Then, in the linear equation solver, we are going to solve for what we call 'a', 'b', and 'c'.
+So we enter "number of equations m = 3", and "number of unknowns, n = 3".  In the grid we enter:
+```
+1 1 1 111441
+1 2 4 242682
+1 3 9 438375
+```
+And when we push submit, we get the (single) solution:
+```
+X1 = 44652    X2 = 34563     X3 = 32226
+```
+Which means the original equation that "split" used was:
+```
+S = 44652 + 34563x + 32226x^2
+```
+To confirm our equation, we plug in "1", "2" and "3" for "x", and we get f(1)=111441, f(2)=242682 and f(3)=438375, thus confirming we have the correct coefficients for the equation.
+
+To get back our original secret, we compute f(0), which gives us 44652, and is confirmed.
+
+So - if you can find a linear-equation solver that can deal with huge values for the coefficients (e.g. ~ 2^4100), you can reconstruct the secret from your shares without using secretshare.jar :-).   
+
+N.B.: Technically, for large values, you need a solver that can perform operations "modulus PRIME" - i.e. modulo the prime number.  We didn't run into that above, because the default prime is huge compared to the secret and the generated coefficients. 
+
+
 
 Other implementations
+=========
 
 Clojure
 -------
@@ -35,10 +84,64 @@ No source available [which means it should not be trusted]. Simple "share format
 C
 ----------
 
-[Shamir's Secret Sharing Scheme]
+[Shamir's Secret Sharing Scheme] aka 'ssss'
 
-Too simple "share format" of NN-hhhhhhhhhh where "n" and "x" are provided, but not the required value "k" (which means this implementation 
-was never fully tested)
+Note: this program "hangs" when there is not enough entropy (a common situation when run in a virtual machine).
+To increase the amount of entropy available:
+```
+$ sudo rngd -r /dev/urandom -o /dev/random
+```
+
+To check the amount available:
+```
+$ cat /proc/sys/kernel/random/entropy_avail
+```
+
+Uses a "share format" of XX-hhhhhhhhhh where "X" is the base-10 value of "x", and and "hhhhh" is the base-16 value of your share of the secret ("obviously").
+The "k" value is given on the command line of ssss-combine, and is also base-10.
+For better compatibility, we must use '-x' (hex input), since the "String" mode in ssss is ASCII, but the "String" mode for secretshare.jar is UTF-8.
+We also disable the "diffusion" mode, since that isn't explained anywhere.
+
+There is an error in the Makefile (the -lgmp must be on the end of the command line).
+Run 'make', and you get ssss-split and ssss-combine applications.
+
+```
+$ ./ssss-split -t 3 -n 5 -x -D
+Secret As Hex String: AE6C
+01-ffe0
+02-575d
+03-06d7
+04-34d2
+05-654a
+```
+
+Converting to base-10, that gives us
+
+```
+$ java -jar secretshare.jar combine -k 3 \
+ -s1 65504 \
+ -s2 22365 \
+ -s3 1751
+```
+Which prints "secret.number = '131168'", which is too bad, because the input secret was 0xAE6C, which is 44652, which means something went wrong.  Plugging the values into the linear equation solver confirms '131168' as the secret, however, the x2 = -76926.5 and x3 = 11262.5, i.e. it has fractional values for the coefficients, something that seems really wrong [but I have no evidence, beyond the fact that secretsharejava will never generate fractional coefficient values].
+
+So - whatever ssss is doing, it is internally consistent, but don't expect to use a 3rd-party to combine your shares.
+And since it is not confirmed, you have little reason to believe that the application is actually working (working = always gives you the correct answer and missing just 1 share means that all answers are possible.) 
+In particular, it is really scary that the linear equation solver does not work with the values produced by ssss.  That means ssss is using some kind of "optimized" equation, that somehow lost sight of the Lagrange interpolation algorithm it purports to implement.
+That, plus the fact that the ssss implementation is impossible to understand [i.e. impossible to map back into simple polynomial equations], means that I wouldn't trust it.  In particular, the implementation has this:
+```
+void field_add(z, x, y) {
+  mpz_xor(z, x, y);
+}
+```
+In other words, it thinks that "XOR" is the same operation as "ADD".  Which, maybe it is given other constraints in the implementation. 
+
+But that just puts the whole package into a well-known category of mine:
+
+    Computes the wrong answer blazingly fast(tm)
+
+
+
 
 
 Information
@@ -75,4 +178,4 @@ Package note:  you can print these modulus values with
 [Shamir's Secret Sharing Scheme]:http://point-at-infinity.org/ssss/
 [Shamir Secret Sharing for Clojure based on secretsharejava]:https://github.com/pelle/secretshare
 [Shamir Secret Sharing in Java]:http://sourceforge.net/projects/secretsharejava/
-
+[Solving A System of Linear Equations]:http://www.math.odu.edu/~bogacki/cgi-bin/lat.cgi?c=sys
