@@ -16,6 +16,7 @@
  *******************************************************************************/
 package com.tiemens.secretshare.engine;
 
+import java.io.PrintStream;
 import java.math.BigInteger;
 import java.security.SecureRandom;
 import java.text.SimpleDateFormat;
@@ -338,7 +339,6 @@ public class SecretShare
     // ==================================================
     private final PublicInfo publicInfo;
 
-
     // ==================================================
     // factories
     // ==================================================
@@ -420,7 +420,6 @@ public class SecretShare
 
         return ret;
     }
-
 
     /**
      * Combine the shares generated by the split to recover the secret.
@@ -839,9 +838,14 @@ public class SecretShare
 
         public boolean equalsType(ShareInfo other)
         {
-            // NOTE: the "public info" does not count toward equality
+            // NOTE: equality of a ShareInfo is based on:
+            //  1.  x
+            //  2.  f(x)
+            //  3.  k
             return ((this.x == other.x)  &&
-                    (this.share.equals(other.share)));
+                    (this.share.equals(other.share)) &&
+                    (this.publicInfo.k == other.publicInfo.k)
+                   );
         }
     }
 
@@ -882,6 +886,9 @@ public class SecretShare
         public final PublicInfo getPublicInfo()
         {
             return publicInfo;
+        }
+        public void debugPrintEquationCoefficients(PrintStream out) {
+            polynomial.debugPrintEquationCoefficients(out);
         }
     }
 
