@@ -5,18 +5,19 @@
  * are made available under the terms of the GNU Lesser Public License v2.1
  * which accompanies this distribution, and is available at
  * http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU Lesser General Public License for more details.
- * 
- * 
+ *
+ *
  * Contributors:
  *     Tim Tiemens - initial API and implementation
  ******************************************************************************/
 package com.tiemens.secretshare.math;
 
+import java.io.PrintStream;
 import java.math.BigInteger;
 
 import com.tiemens.secretshare.exceptions.SecretShareException;
@@ -25,20 +26,20 @@ import com.tiemens.secretshare.exceptions.SecretShareException;
  * Polynomial equation implementation.
  *   8*x^3  + 5*x^2  + 13*x   + 432
  *   [term3]  [term2]  [term1]  [term0]
- *    
+ *
  * Arguments to the constructor are in this order:
  *   432     + 13*x    + 5*x^2 + 8*x^3
  *   [term0]   [term1]  [term2]  [term3]
- *   
- * 
+ *
+ *
  *  Provides support ONLY for integer exponent values.
  *  Provides support ONLY for BigInteger values of "x".
- *  Provides support ONLY for BigInteger values of "coefficients" 
+ *  Provides support ONLY for BigInteger values of "coefficients"
  *
- *  It may be a "short distance" between BigInteger and BigDecimal, 
+ *  It may be a "short distance" between BigInteger and BigDecimal,
  *  but that distance is still too big to justify making
  *  this implementation more complex.
- *  
+ *
  * @author tiemens
  *
  */
@@ -69,7 +70,7 @@ public class PolyEquationImpl
     /**
      * Helper factory to create instances.
      * Accepts 'int', converts them to BigInteger, and calls the constructor.
-     * 
+     *
      * @param args as int values
      * @return instance
      */
@@ -92,7 +93,7 @@ public class PolyEquationImpl
             throw new SecretShareException("Must have at least 1 coefficient");
         }
         coefficients = new BigInteger[inCoeffs.length];
-        
+
         for (int i = 0, n = inCoeffs.length; i < n ; i++)
         {
             if (inCoeffs[i] == null)
@@ -102,7 +103,7 @@ public class PolyEquationImpl
             }
             coefficients[i] = inCoeffs[i];
         }
-        
+
         // Constraint check:
         for (Number n : coefficients)
         {
@@ -126,19 +127,19 @@ public class PolyEquationImpl
         {
             // the index of term N is N:
             final int indexOfTerm = term;
-            
+
             // the exponent of term N is N:
             final int powerOfTerm = term;
-            
+
             BigInteger base = x;
             BigInteger power = base.pow(powerOfTerm);
-            
+
             BigInteger add = coefficients[indexOfTerm].multiply(power);
             ret = ret.add(add);
         }
         return ret;
     }
-    
+
     public String debugDump()
     {
         String ret = "PolyEqImpl[\n";
@@ -148,6 +149,25 @@ public class PolyEquationImpl
         }
         ret += "]";
         return ret;
+    }
+
+    public void debugPrintEquationCoefficients(PrintStream out) {
+        // print the coefficients:
+        for (int i = 0, n = coefficients.length; i < n; i++ )
+        {
+            out.println("DEBUG: C" + i + " = " + coefficients[i]);
+        }
+        // print the equation:
+        String sep = "";
+        out.print("DEBUG: f(x) = ");
+        for (int i = 0, n = coefficients.length; i < n; i++)
+        {
+            out.print(sep);
+            sep = " + ";
+            out.print(coefficients[i]);
+            out.print("*x^" + i);
+        }
+        out.println("");
     }
 
     // ==================================================
