@@ -5,6 +5,9 @@ Release Notes  --
 v1.4.2
 ======
  o upgrade to gradle 2.x; upgrade jacoco plugin to standard plugin
+ o ShareInfo.equals() now correctly uses "k" to determine equality
+ o add option -debugPrintEquationCoefficients to print coefficients/equation
+ + TODO: make the random-coefficients "bigger"
 
 v1.4.1
 ======
